@@ -10,6 +10,9 @@ What's New in Python 3.3 Alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #13777: Add PF_SYSTEM sockets on OS X.
+  Patch by Michael Goderbauer.
+
 - Issue #13908: Ready types returned from PyType_FromSpec.
 
 - Issue #11235: Fix OverflowError when trying to import a source file whose
